# negative-space

./: .gitignore  README.md  coverage.xml  demo_console_report.json  demo_output_report.json  pyproject.toml
.github/workflows/: linkedin-thought-leadership.yml  publish.yml  tests.yml
benchmarks/: PORTFOLIO_ANALYSIS.md
core/: agent.py  clustering.py  core.py  mapping.py  navigation.py  visualization.py
core/void/logic/: consensus.py  mitigation.py
docs/: GLOSSARY.md  VOID_REPORT_SCHEMA.md  manifesto.md
examples/: README.md  demo.py  featured_demo.py  portfolio_demo.py  quickstart.py
manifesto/: DECISIONS.md  MANIFESTO.md
src/: __init__.py  doubt.py  ontology.py  void
src/inference/: electrical_shadow.py
src/negative_space/: __init__.py  __main__.py  demo.py
src/negative_space/void/interpolation/: engine.py
src/negative_space/void/temporal/: drift.py
tests/: conftest.py  test_core_structures.py  test_electrical.py  test_epistemology.py  test_void_agent.py
