[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "negative-space"
version = "0.1.0"
description = "A framework for reasoning about unknowns and gaps - mapping the void between current and desired states"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "WADELABS", email = "research@wadelabs.ai"}
]
keywords = ["ai", "agents", "reasoning", "gap-analysis", "void-mapping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.6.0",
    "matplotlib>=3.4.0",
    "dataclasses-json>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
negative-space = "negative_space.__main__:main"

[project.urls]
Homepage = "https://github.com/WADELABS/negative-space"
Repository = "https://github.com/WADELABS/negative-space"
Issues = "https://github.com/WADELABS/negative-space/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["negative_space*"]

[tool.setuptools.package-data]
negative_space = ["py.typed"]
